# wasm-render

./: Cargo.toml  index.html  index.js  package-lock.json  package.json  webpack.config.js
docs/: architecture.md  js-usage.md
src/: batched.rs  batcher.rs  camera.rs  composer.rs  context.rs  gpu.rs  instances.rs  lib.rs  mesh_instances.rs  shader.rs  timeseries.rs  utils.rs
tests/browser/: index.html  renderer-fixtures.js  tests.js
tests/browser/scenes/: orbit-demo.js
tests/browser/ui/: filter-controls.js
